# D3D11Helper

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  README_APPLY.txt  apply_overlay.cmd  build_and_test.cmd  build_and_test_d3d12_interop.cmd  build_debug_release_and_test.cmd  build_release_and_test.cmd  build_test_and_push_if_passed.cmd  git_commit_push.cmd
Test/: CMakeLists.txt  D3D11HelperTest.cpp  PackageSmokeTest.cmake  README.md  TestCommon.hpp  TestUtil.hpp  main.cpp  test_AdvancedProcessing.cpp  test_FormatUtil.cpp  test_Helpers.cpp  test_Processing.cpp  test_ProcessingBlur.cpp  test_ProcessingColorAdjust.cpp  test_ProcessingFusedPipeline.cpp  test_ProcessingKernelFilter.cpp  test_ProcessingMask.cpp  test_ProcessingPyramid.cpp  test_ProcessingPyramidBlur.cpp  test_ProcessingPyramidRegionBlur.cpp  test_ProcessingRegionBlur.cpp  test_ProcessingRegionEffect.cpp  test_ProcessingThreshold.cpp  test_ShaderCompiler.cpp  test_binding_set.cpp  test_buffer.cpp  test_compute.cpp  test_copy.cpp  test_core.cpp  test_coverage_hardening.cpp  test_cpu_image.cpp  test_deferred_context.cpp  test_diagnostics.cpp  test_gpu_edge_cases.cpp  test_graphics.cpp  test_integration.cpp  test_interop_d3d12.cpp  test_interop_edge_cases.cpp  test_interop_fence.cpp  test_interop_keyed_mutex.cpp  test_interop_shared.cpp  (+20 more)
Test/package_smoke/: CMakeLists.txt  main.cpp
cmake/: D3D11HelperConfig.cmake.in  D3D11HelperDxcRuntime.cmake
doc/: Architecture.md  CodexPrompt_v1.5.0_AllImplementation.md  CodexPrompt_v1.7.0_AllImplementation.md  CodexReviewChecklist_v1.5.0_Diagnostics.md  CodexReviewChecklist_v1.7.0_ViewState.md  D3D11BindingSet.md  D3D11Copy.md  D3D11Core.md  D3D11Diagnostics.md  D3D11Foundation.md  D3D11Framework.md  D3D11Gpu.md  D3D11GpuProfiler.md  D3D11GpuTimer.md  D3D11Interop.md  D3D11Mipmap.md  D3D11Presentation.md  D3D11Processing.md  D3D11ProcessingFutureWork.md  D3D11Resolve.md  D3D11ShaderReflection.md  D3D11State.md  D3D11TextureTransfer.md  D3D11View.md  DesignSpec_v1.5.0_Diagnostics.md  DesignSpec_v1.7.0_ViewState.md  DesignSpec_v1.8.0_Interop.md  GenericGpuFoundationD3D11FinalAudit.md  GenericGpuFoundationD3D11Phase1Yuv.md  GenericGpuFoundationD3D11Phase2ResourceView.md  GenericGpuFoundationD3D11Phase3ScopedMap.md  GenericGpuFoundationD3D11Phase4FencePoint.md  GenericGpuFoundationD3D11Plan.md  ImplementationPlan_v1.5.0_Diagnostics.md  ImplementationPlan_v1.7.0_ViewState.md  ImplementationPlan_v1.8.0_Interop.md  MigrationGuide_v1.1.0.md  MigrationGuide_v1.2.0.md  MigrationGuide_v1.3.0.md  MigrationGuide_v1.4.0.md  (+25 more)
include/D3D11Helper/D3D11Core/: D3D11Common.hpp  D3D11Core.hpp  D3D11CoreConfig.hpp  D3D11Debug.hpp  D3D11DeferredContext.hpp  D3D11DeviceContext.hpp  D3D11Fence.hpp  D3D11FormatUtil.hpp  D3D11SharedResource.hpp  DxgiAdapterSelector.hpp  DxgiUtil.hpp  ThrowIfFailed.hpp
include/D3D11Helper/D3D11Diagnostics/: D3D11Debug.hpp  D3D11DeviceLost.hpp  D3D11Diagnostics.hpp  D3D11GpuProfiler.hpp  D3D11GpuTimer.hpp  D3D11InfoQueue.hpp
include/D3D11Helper/D3D11Foundation/: D3D11Common.hpp  D3D11FormatUtil.hpp  D3D11Foundation.hpp  DxgiAdapterSelector.hpp  DxgiUtil.hpp  ThrowIfFailed.hpp
include/D3D11Helper/D3D11Framework/: D3D11ComputePipeline.hpp  D3D11Framework.hpp  D3D11GraphicsPipeline.hpp  D3D11Helpers.hpp  D3D11Resource.hpp  D3D11ShaderCompiler.hpp  D3D11StagingBuffer.hpp  D3D11SwapChainHelper.hpp
include/D3D11Helper/D3D11Gpu/: D3D11BindingSet.hpp  D3D11ComputePipeline.hpp  D3D11Copy.hpp  D3D11CpuImage.hpp  D3D11Gpu.hpp  D3D11GraphicsPipeline.hpp  D3D11Helpers.hpp  D3D11Mipmap.hpp  D3D11Resolve.hpp  D3D11Resource.hpp  D3D11ResourceValidation.hpp  (+7 more)
sample/: CMakeLists.txt  README.md
sample/01_HelloDevice/: main.cpp
sample/02_ComputeGrayscale/: Grayscale.hlsl  main.cpp
sample/03_HelloTriangle/: main.cpp
sample/04_BufferCompute/: main.cpp
sample/05_DynamicStreaming/: main.cpp
sample/06_SharedResource/: main.cpp
sample/07_ProcessingFusedConvertResize/: main.cpp
sample/08_ProcessingP010Rgba16/: main.cpp
sample/09_ProcessingBlur/: main.cpp
sample/10_ProcessingRegionEffect/: main.cpp
sample/11_ProcessingRegionBlur/: main.cpp
sample/12_ProcessingColorAdjust/: main.cpp
sample/13_ProcessingKernelFilter/: main.cpp
sample/14_ProcessingMask/: main.cpp
sample/15_ProcessingThreshold/: main.cpp
sample/16_ProcessingPyramid/: main.cpp
sample/17_ProcessingPyramidBlur/: main.cpp
sample/18_TextureTransfer/: main.cpp
sample/19_PresentationWindow/: main.cpp
sample/20_ComputeBindingSet/: main.cpp
sample/21_Diagnostics/: main.cpp
sample/22_CopyResolveMipmap/: main.cpp
sample/23_ViewState/: main.cpp
sample/24_Interop/: main.cpp
sample/25_ProcessingCustomFusedShader/: CustomNv12ResizeDarken.hlsl  main.cpp
shaders/D3D11Processing/: AdvancedTransformRgba.hlsl  BlurCommon.hlsli  ColorAdjustRgba.hlsl  ColorSpace.hlsli  CompositeRgba.hlsl  ConvertRgbToRgb.hlsl  ConvertRgbToYuv420.hlsl  ConvertYuv420ToRgb.hlsl  FusedRgbToRgbResize.hlsl  FusedYuv420ToRgbResize.hlsl  MaskCommon.hlsli  ProcessingCommon.hlsli  PyramidCommon.hlsli  RegionEffectRgba.hlsl  RemapRgba.hlsl  ResizeRgba.hlsl  ThresholdCommon.hlsli  YuvPrimitiveProbe.hlsl  YuvPrimitives.hlsli
src/: D3D11AdvancedProcessing.cpp  D3D11BindingSet.cpp  D3D11Blur.cpp  D3D11ColorAdjust.cpp  D3D11Composite.cpp  D3D11ComputePipeline.cpp  D3D11Copy.cpp  D3D11Core.cpp  D3D11CpuImage.cpp  D3D11Debug.cpp  D3D11DeferredContext.cpp  D3D11DeviceContext.cpp  D3D11DeviceLost.cpp  D3D11Fence.cpp  D3D11FenceSupport.cpp  D3D11FormatConverter.cpp  D3D11FormatUtil.cpp  D3D11FusedPipeline.cpp  D3D11GpuProfiler.cpp  D3D11GpuTimer.cpp  D3D11GraphicsPipeline.cpp  D3D11HelperTest.cpp  D3D11Helpers.cpp  D3D11InfoQueue.cpp  D3D11KernelFilter.cpp  D3D11KeyedMutex.cpp  D3D11MaskProcessor.cpp  D3D11Mipmap.cpp  D3D11ProcessingContext.cpp  D3D11ProcessingResourceView.cpp  D3D11ProcessingShaderCache.cpp  D3D11ProcessingTypes.cpp  D3D11PyramidBlur.cpp  D3D11PyramidProcessor.cpp  D3D11PyramidRegionBlur.cpp  D3D11RegionBlur.cpp  D3D11RegionEffect.cpp  D3D11Remap.cpp  D3D11RenderTarget.cpp  D3D11Resize.cpp  (+20 more)
(+32 files in other folders)
